examples/test/testpolicy12866.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12866
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key34: value47
      key35: value17
      key30: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value43
      podSelector:
        matchLabels:
          key36: value33
          key11: value4
          key10: value25
